--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=foro-curso
 spring.datasource.url=jdbc:mysql://localhost:3306/foro_curso
-spring.datasource.username=11
-spring.datasource.password=Costa#3274
+spring.datasource.username={NOMBRE_USUARIO}
+spring.datasource.password={TU_CLAVE}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
